# server.js
@@ -9,14 +9,12 @@ const path = require('path');
 // Import routes
 const authRoutes = require('./routes/authRoutes');
 const catalogRoutes = require('./routes/catalogRoutes');
-const adminRoutes = require('./routes/adminRoutes');
 const reviewRoutes = require('./routes/reviewRoutes');
 const orderRoutes = require('./routes/orderRoutes');
 const productRoutes = require('./routes/productRoutes');
 const invoiceRoutes = require('./routes/invoiceRoutes');
-const customerRoutes = require('./routes/customerRoutes');
 const couponRoutes = require('./routes/couponRoutes');
-const userLogRoutes = require('./routes/userLogRoutes');
+const userRoutes = require('./routes/userRoutes');
 
 const app = express();
 
@@ -34,14 +32,12 @@ app.use('/api-docs', express.static(path.join(__dirname, 'public', 'api-docs')))
 // Routes
 app.use('/api/auth', authRoutes);
 app.use('/api/catalog', catalogRoutes);
-app.use('/api/admin', adminRoutes);
 app.use('/api/reviews', reviewRoutes);
 app.use('/api/orders', orderRoutes);
 app.use('/api/products', productRoutes);
 app.use('/api/invoices', invoiceRoutes);
-app.use('/api/customers', customerRoutes);
 app.use('/api/coupons', couponRoutes);
-app.use('/api/user_logs', userLogRoutes);
+app.use('/api/users', userRoutes);
 
 // Error handling middleware
 app.use((err, req, res, next) => {
